--- a/ubuntu/debian/rules
+++ b/ubuntu/debian/rules
@@ -5,27 +5,11 @@
 # dh-make output file, you may use that output file without restriction.
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
-# Multiarch (if supported). Required for precise
-DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH 2>/dev/null)
-
-# Configuration flags.
-CONFIGURE_ARGS=
- 
-# If multiarch is supported, override CMAKE_INSTALL_LIB
-ifneq ($(DEB_HOST_MULTIARCH),)
-CONFIGURE_ARGS+=-DCMAKE_INSTALL_LIBDIR:STRING="lib/${DEB_HOST_MULTIARCH}"
-endif
-
-.PHONY: override_dh_auto_configure \
-        override_dh_strip 
+.PHONY: override_dh_auto_configure
 
 %:
 	dh $@ --parallel
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-	    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-            $(CONFIGURE_ARGS)
-
-override_dh_strip:
-	dh_strip -a --dbg-package=libignition-common0-dbg
+	    -DCMAKE_BUILD_TYPE=RelWithDebInfo
