--- a/ubuntu/debian/rules
+++ b/ubuntu/debian/rules
@@ -6,7 +6,7 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 .PHONY: override_dh_auto_configure \
-        override_dh_auto_install \
+        override_dh_install \
         override_dh_auto_test
 
 %:
@@ -16,12 +16,12 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 	    -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
-override_dh_auto_install:
-	dh_auto_install
+override_dh_install:
+	dh_install --
 	# need to remove files present in components
-	$(RM) debian/libignition-common3-core-dev/usr/include/ignition/common[0-99]/ignition/common/av.hh
-	$(RM) debian/libignition-common3-core-dev/usr/include/ignition/common[0-99]/ignition/common/events.hh
-	$(RM) debian/libignition-common3-core-dev/usr/include/ignition/common[0-99]/ignition/common/graphics.hh
+	$(RM) debian/libignition-common3-core-dev/usr/include/ignition/common*/ignition/common/av.hh
+	$(RM) debian/libignition-common3-core-dev/usr/include/ignition/common*/ignition/common/events.hh
+	$(RM) debian/libignition-common3-core-dev/usr/include/ignition/common*/ignition/common/graphics.hh
 	dh_missing --list-missing
 
 # test cannot run in parallel
