--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -79,6 +79,7 @@ Package: libignition-common3-av-dev
 Architecture: any
 Section: libdevel
 Depends: libignition-cmake2-dev,
+         libignition-common3-core-dev,
          libavdevice-dev,
          libavformat-dev,
          libavcodec-dev,
@@ -109,6 +110,7 @@ Package: libignition-common3-events-dev
 Architecture: any
 Section: libdevel
 Depends: libignition-cmake2-dev,
+         libignition-common3-core-dev,
          libignition-math6-dev,
          libignition-common3-events (= ${binary:Version}),
          ${misc:Depends}
@@ -135,6 +137,7 @@ Package: libignition-common3-graphics-dev
 Architecture: any
 Section: libdevel
 Depends: libignition-cmake2-dev,
+         libignition-common3-core-dev,
          libignition-math6-dev,
          libtinyxml2-dev,
          libgts-dev,
@@ -163,6 +166,7 @@ Package: libignition-common3-profiler-dev
 Architecture: any
 Section: libdevel
 Depends: libignition-cmake2-dev,
+         libignition-common3-core-dev,
          libignition-common3-profiler (= ${binary:Version}),
          ${misc:Depends}
 Multi-Arch: same
