--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -40,8 +40,8 @@ Depends: libignition-cmake2-dev,
          uuid-dev,
          libignition-common3 (= ${binary:Version}),
          ${misc:Depends}
-Breaks: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (core) - Development files
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -70,8 +70,8 @@ Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (AV) - Shared library
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -91,8 +91,8 @@ Depends: libignition-cmake2-dev,
          libavutil-dev,
          libignition-common3-av (= ${binary:Version}),
          ${misc:Depends}
-Breaks: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (AV) - Development files
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -105,8 +105,8 @@ Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (Events) - Shared library
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -122,8 +122,8 @@ Depends: libignition-cmake2-dev,
          libignition-math6-dev,
          libignition-common3-events (= ${binary:Version}),
          ${misc:Depends}
-Breaks: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (Events) - Development files
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -136,8 +136,8 @@ Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (Graphics) - Shared library
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -155,8 +155,8 @@ Depends: libignition-cmake2-dev,
          libgts-dev,
          libignition-common3-graphics (= ${binary:Version}),
          ${misc:Depends}
-Breaks: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (Graphics) - Development files
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -169,8 +169,8 @@ Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3 (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (Profiler) - Shared library
  Ignition Common is a component in the ignition framework, a set of libraries
@@ -185,8 +185,8 @@ Depends: libignition-cmake2-dev,
          libignition-common3-core-dev,
          libignition-common3-profiler (= ${binary:Version}),
          ${misc:Depends}
-Breaks: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
-Replaces: libignition-common-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Breaks: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
+Replaces: libignition-common3-dev (<< 3.0.0~pre5+hg20190228r1b2df90990)
 Multi-Arch: same
 Description: Ignition Common classes and functions (profiler) - Development files
  Ignition Common is a component in the ignition framework, a set of libraries
